<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, Trace2LearnActivity!</string>
    <string name="app_name">Trace2Learn</string>
    <string name="insert_tag">Insert a new tag</string>
    <string name="character">Character</string>
    <string name="tag">Tag</string>
    <string name="submit">Submit</string>
    <string name="search_char">Search a character</string>
    <string name="search">Search</string>
    <string name="search_tag">Search a tag</string>
    <string name="results">Results displayed here</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
	<string name="delete_confirm">Do you want to delete this tag?</string>
	<string name="deleteXML_confirm">Do you want to delete this file?</string>
	<string name="delete">Click on item to delete</string>
	<string name="exportLibrary">Export Character Library</string>
	<string name="exportCollection">Export Collection Library</string>
	<string name="export">Export</string>
	<string name="exportDescription">Type the file name or click the list item to delete.</string>
	
	<string name="tag_header">Edit Tags and Attributes</string>
	<string name="addtag_header">Add Tag</string>
	<string name="add">Add</string>
	
	<string name="word">Word/Character here as whatever object structure</string>
	<string name="tag1">Tagged</string>
	
	<string name="li_preview_description">Preview</string>
	<string name="charplace">Placeholder</string>
	<string name="practice">Practice</string>
	<string name="animate">Playback</string>
	<string name="filter">Filter</string>
	<string name="filter_clear">Clear Filter</string>
	<string name="filter_toast">Filter removed.</string>
	<string name="filter_prompt">Enter tag to filter characters by:</string>
	<string name="create">Create</string>
	<string name="cancel">Cancel</string>
	<string name="new_tag">New Tag</string>
	<string name="new_attr">New Attribute</string>
	<string name="key">Key</string>
	<string name="value">Value</string>
	<string name="tag_finish_confirm">Proceed with no tag or attribute?</string>
	<string name="import_description">Select a file to import.</string>
	<string name="importXml_confirm">Importing %1$d character(s), %2$d word(s), %3$d collection(s).\n This may overwrite existing data. Continue?</string>
	<string name="importCharacters">Import Character Library</string>
	<string name="done_button">Done</string>
	<string name="new_tag_button">New Tag</string>
	<string name="new_attr_button">New Attribute</string>
	
</resources>