<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textExportTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exportCollection"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/exportList"
        android:layout_width="wrap_content"
        android:layout_height="323dp"
        android:layout_weight="0.68" >
    </ListView>

    <TextView
        android:id="@+id/exportDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportDescription"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >


        <EditText
            android:id="@+id/editExport"
            android:layout_width="253dp"
            android:layout_height="wrap_content" />



        <Button
            android:id="@+id/export_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onExportButtonClick"
            android:text="@string/export" />

    </LinearLayout>

</LinearLayout>